<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:adjustViewBounds="true"
        android:maxWidth="70dp"
        android:maxHeight="70dp"
        android:scaleType="fitCenter"
        android:src="@drawable/latte"
        android:contentDescription="@string/coffeebuzz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="304dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_name"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="301dp"
        android:layout_height="41dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_mail_outline_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/email_register"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserName" />

    <EditText
        android:id="@+id/eTPassword"
        android:layout_width="302dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_security"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/password_register"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailAddress" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="310dp"
        android:layout_height="42dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_security"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTPassword" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:padding="5dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:cornerRadius="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword"
        app:layout_constraintVertical_bias="0.021" />

    <Button
        android:id="@+id/btngoogle"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:padding="5dp"
        android:text="@string/google"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup"
        app:layout_constraintVertical_bias="0.23" />


</androidx.constraintlayout.widget.ConstraintLayout>